# nt-house-info-spider

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml
nt_house_info_spider/: main.py
nt_house_info_spider/bussiness/: spider.py
nt_house_info_spider/db/: house_info_table.py  model.py
nt_house_info_spider/log/: __init__.py
nt_house_info_spider/static/: constant.py
